Refactoring to accept multiple methods at once